--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <section class="slider_section ">
       <div class="container ">        
         <div class="row">
-          <marquee><h5>HAPPY BIRTHDAY RAMESH</h5></marquee>
+              <marquee><h1 style="color:red">HAPPY BIRTHDAY RAMESH</h1></marquee>
           <div class="col-md-6 ">
             <div class="detail-box">
               <h1>
